# pocket-agent

./: pyproject.toml
src/: main.py
src/pocket_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: get_env_var.py  llm.py  logger.py  openai_generate.py
